[project]
name = "rag-md-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "pandas>=3.0.1",
    "pandera>=0.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
]
